bk_ida/gccida/g0/push_reload
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1333:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a5, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1339:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1364:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class valid_class; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1367:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v37; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1368:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v38; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1369:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v39; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1370:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v40; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1409:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmodea; // [rsp+8h] [rbp-B8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1412:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code secondary_out_icode; // [rsp+34h] [rbp-8Ch] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1420:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code secondary_in_icode; // [rsp+60h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode rel_mode; // [rsp+6Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1427:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+84h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1428:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class in_class; // [rsp+88h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1546:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = mode_class_0[*( unsigned __int8 *)( ina->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1547:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( ina->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1576:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( ina->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/reload.c:1578:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)ina + 2)); 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_reload/src/obj/reload.o] Error 1
